@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.506 2006/01/13 15:09:07 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.507 2006/01/16 07:18:28 rocket Exp $
+
+  16 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  fixes for bugs 119009,119041 and 118985
 
   13 Jan 2006; Eric Edgar <rocket@gentoo.org>
   +examples/netboot2_template.spec, modules/catalyst_support.py,
